# itsthesetup-be

./: manage.py  pyproject.toml  todo.txt
api/: models.py  serializers.py  views.py
api/factory/: factories.py
api/fixtures/: games.json
api/helpers/: jwt.py
api/management/commands/: cleardb.py  clearusers.py  seed.py  seedusers.py
api/migrations/: 0001_initial.py  0002_alter_test_options.py  0002_remove_car_game_car_game.py  0003_rename_game_car_games.py  0003_test_created_at_test_description_test_name_and_more.py  0004_rename_downloads_setup_downloads_count_and_more.py  0005_alter_setup_created_at.py
itsthesetup/: asgi.py  settings.py  urls.py  wsgi.py
