[project]
name = "itsthesetup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "dotenv>=0.9.9",
    "markdown>=3.10.2",
    "pgvector>=0.4.2",
    "psycopg2>=2.9.11",
]
