[project]
name = "itsthesetup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.4",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "dotenv>=0.9.9",
    "factory-boy>=3.3.3",
    "faker>=40.15.0",
    "markdown>=3.10.2",
    "pgvector>=0.4.2",
    "psycopg2>=2.9.11",
    "pyjwt>=2.12.1",
]
